# sct

./: README.md  configure.ac
src/: Makefile.am  getnrand.c  getsz.c  puts.c  rand.h
